styles.css
/* reset */
*,
*:before,
*:after {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: sans, sf pro text, -apple-system, BlinkMacSystemFont, Roboto,
    segoe ui, Helvetica, Arial, sans-serif, apple color emoji, segoe ui emoji,
    segoe ui symbol;
}

ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

/* navbar */

nav {
  width: 100vw;
  display: flex;
  gap: 1rem;
  align-items: center;
  margin-bottom: 5px;
  box-shadow: 0 2px 4px #00000014, 0 4px 12px #00000014;
}

.fa-bars.baricon {
  display: none;
}

.fa-cart-shopping:hover,
.teach:hover,
.business:hover,
.categs:hover {
  color: indigo;
}

.search-form {
  flex: 1;
  display: flex;
  gap: 1rem;
  border: 1px solid #1c1d1f;
  border-radius: 9999px;
  background-color: #f7f9fa;
  padding: 10px 20px 10px 20px;
}

.fa-magnifying-glass {
  padding-top: 4px;
}

.input-field {
  background-color: #f7f9fa;
  border: 0;
  flex: 1;
}

.sign-up {
  align-self: center;
  color: white;
  background-color: black;
  padding: 10px;

  font-weight: 700;
  float: right;
}

.login {
  align-self: center;
  padding: 10px;

  border: solid 1px black;
  font-weight: 700;
  float: right;
}

.login:hover,
.fa-globe:hover {
  background-color: #d1d7dc;
}

.fa-globe {
  padding: 10px;
  margin-right: 10px;
  border: solid 1px black;
}

.icon-container {
  padding: 3px;
}

.logo-container {
  margin: 22px;
  margin-right: 10px;
}

/*navbar ending , header start*/

.smaller-clock {
  display: none;
}

.body-container {
  max-width: 1430px;
  margin: 0 auto;
}

.clockimg {
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
}

.header {
  position: relative;
  display: flex;
  max-width: 1430px;
  margin: 0 auto 4.8rem;
}

.header-text {
  position: absolute;
  margin: 45px 90px;
  padding: 50px;
  width: 420px;
  background-color: white;
  box-shadow: 0 2px 4px rgb(0 0 0 / 8%), 0 4px 12px rgb(0 0 0 / 8%);
}

.header-title {
  font-family: SuisseWorks, Georgia, Times, times new roman, serif,
    apple color emoji, segoe ui emoji, segoe ui symbol;
  font-size: x-large;
  font-weight: 700;
  margin-top: 0;
}

.header-p {
  margin-bottom: 0;
}

/* header end footer(Courses) start*/

.footer-title {
  padding: 30px;
}

.learning-fields {
  padding: 30px;
}

.field-list {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  padding: 0;
  margin: 0;
}

.field-list > .nav-item {
  color: #6a6f73;
  font-weight: bold;
}

li:hover {
  color: black;
}

.field-list > .selected {
  color: black;
}

.field-courses {
  border: 1px #d1d7dc solid;
  padding: 3.2rem;
  margin: 20px;
}

.field-description {
  overflow: hidden;
  width: 100%px;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

.explore-python {
  display: inline-block;
  border: 1px black solid;
  padding: 10px;
  background-color: white;
  font-weight: bold;
  margin-bottom: 30px;
}

.explore-python:hover {
  background-color: #0000000a;
}

.course {
  margin-top: 15px;
  width: 240px;
  margin-right: 15px;
}

.hidden-course {
  display: none;
}

.course > img:hover {
  opacity: 0.7;
}

.course-title {
  margin: 5px 0;
}

.course > img {
  width: 240px;
}

.course-list {
  display: flex;
  flex-wrap: wrap;
}

.instructor {
  color: #6a6f73;
  margin: 5px 0;
}

.raters-number {
  color: #6a6f73;
}

.fa-star,
.fa-star-half {
  color: #e59819;
}

.rating {
  font-weight: bolder;
  color: #b4690e;
}

.rating-container {
  margin: 10px 0;
}

.new-price {
  font-weight: bold;
}

.old-price {
  color: #6a6f73;
  text-decoration: line-through;
}

.price-container {
  margin-bottom: 15px;
}

.best-seller {
  font-weight: bold;
  background-color: #eceb98;
  color: #3d3c0a;
  padding: 5px;
}

.top-categories {
  max-width: 1430px;
  margin: 0 auto;
}

.category-image {
  width: 100%;
  height: auto;
}

.category-title {
  font-family: udemy sans, -apple-system, BlinkMacSystemFont, Roboto, segoe ui,
    Helvetica, Arial, sans-serif, apple color emoji, segoe ui emoji,
    segoe ui symbol;
  font-weight: 700;
  line-height: 1.2;
  letter-spacing: -0.02rem;
}

.top-categories-header {
  font-family: udemy sans, -apple-system, BlinkMacSystemFont, Roboto, segoe ui,
    Helvetica, Arial, sans-serif, apple color emoji, segoe ui emoji,
    segoe ui symbol;
  font-weight: 700;
  line-height: 1.2;
  letter-spacing: -0.02rem;
  font-size: 1.5rem;
}

ul.categories-list {
  padding: 1.5rem;
}
/* media query for screens less than 900px in width */

@media only screen and (max-width: 900px) {
  .fa-bars.baricon {
    display: flex;
    padding-left: 20px;
  }

  .clockimg {
    display: none;
  }

  .smaller-clock {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-width: 100%;
  }

  .logo-container {
    margin-left: auto;
    padding-right: 30px;
  }

  .header-container {
    width: 100%;
    max-width: 786px;
  }

  .header-text {
    position: relative;
    width: 100%;
    margin: 0 0;
  }

  .login {
    display: none;
  }

  .sign-up {
    display: none;
  }

  i.fa-globe {
    display: none;
  }

  .search-form {
    display: none;
  }

  .categs {
    display: none;
  }

  .fa-cart-shopping {
    display: none;
  }

  .icon-container {
    display: none;
  }

  .business {
    display: none;
  }

  .teach {
    display: none;
  }
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
  color: #fff;
  display: block;
  height: 40px;
  width: 30px;
  margin: 20px 0 0 15px;
  background-position: 50%;
  background-size: 100% 100%;
}

.carousel-control-next,
.carousel-control-prev {
  width: 5%;
  height: 170px;
}

.carousel-control-next {
  right: -0.5%;
}

.carousel-control-prev {
  left: -2.6%;
}

.btn-container {
  align-items: center;
  background-color: #1c1d1f;
  opacity: 0.3;
  height: 80px;
  width: 60px;
  border-radius: 70%;
}

.btn-container:hover {
  opacity: 0.9;
}

.carousel-inner .carousel-item.active,
.carousel-inner .carousel-item-next,
.carousel-inner .carousel-item-prev {
  display: flex;
}

.active > div:first-child {
  display: block;
}
@media (max-width: 767px) {
  .carousel-inner .active.left {
    left: -50%;
  }
  .carousel-inner .active.right {
    left: 50%;
  }
  .carousel-inner .next {
    left: 50%;
  }
  .carousel-inner .prev {
    left: -50%;
  }
  .carousel-col {
    width: 50%;
  }
  .active > div:first-child + div {
    display: block;
  }
}
*/ .active > div {
  display: none;
}

.active > div:first-child {
  display: block;
}

@media (max-width: 992px) {
  .carousel-inner .carousel-item > div {
    display: none;
  }

  .carousel-inner .carousel-item > div:first-child {
    display: block;
  }

  .carousel-control-next,
  .carousel-control-prev {
    height: 170px;
  }
}

@media (min-width: 900px) and (max-width: 1409px) {
  .carousel-inner .active.left {
    /* left: -33%; */
    transform: translateX(-20%);
  }

  .carousel-inner .active.right {
    /* left: 33%; */
    transform: translateX(20%);
  }

  .carousel-inner .next {
    /* left: 33%; */
    transform: translateX(20%);
  }

  .carousel-inner .prev {
    /* left: -33%; */
    transform: translateX(-20%);
  }

  .carousel-col {
    width: 33%;
  }

  .active > div:first-child + div {
    display: block;
  }

  .active > div:first-child + div + div {
    display: block;
  }

  .carousel-control-next,
  .carousel-control-prev {
    height: 170px;
  }
}

@media (min-width: 1410px) {
  .carousel-inner .active.left {
    /* left: -20%; */
    transform: translateX(-20%);
  }

  .carousel-inner .active.right {
    /* left: 20%; */
    transform: translateX(20%);
  }

  .carousel-inner .next {
    /* left: 20%; */
    transform: translateX(20%);
  }

  .carousel-inner .prev {
    /* left: -20%; */
    transform: translateX(-20%);
  }

  .active > div:first-child + div {
    display: block;
  }

  .active > div:first-child + div + div {
    display: block;
  }

  .active > div:first-child + div + div + div {
    display: block;
  }

  .active > div:first-child + div + div + div + div {
    display: block;
  }

  .carousel-control-next,
  .carousel-control-prev {
    height: 170px;
    top: 0%;
  }
}

.nav-link.active,
.nav-tabs {
  border: 0;
}

.nav-link {
  color: grey;
  transition: none;
}

.nav-tabs .nav-link.active {
  color: black;
}

.nav-tabs {
  --bs-nav-tabs-link-hover-border-color: white;
}

.nav {
  --bs-nav-link-hover-color: black;
}

